2014-01-09  Sergey Poznyakoff  <gray@gnu.org>

	Fix search boundary checking.
	Based on report from Gavin Smith <gavinsmith0123@gmail.com>

	* info/search.c (regexp_search): Save previous values of
	start and end bounds (sorted) and rescan the buffer if these
	differ from the actual values.
	Fix boundary checking (using end bound instead of the buffer
	length).
	Use x2nrealloc to grow matches buffer.

2014-01-06  Karl Berry  <karl@gnu.org>

	* doc/texinfo.texi: 2014.

	* doc/texinfo.texi (@url): split into several nodes:
	(@t{@@url} Examples,
         URL Line Breaking,
         @t{@@url} PDF Output Format,
         PDF Colors).  Document the PDF-only \urefurlonlylinktrue
         and \linkcolor, \urlcolor texinfo.tex features.

2014-01-01  Karl Berry  <karl@gnu.org>

	* Pod-Simple-Texinfo/pod2texi.pl,
	* doc/texinfo.txi,
	* doc/refcard/txirefcard.tex,
	* info/info.c,
	* info/infokey.c,
	* install-info/install-info.c,
	* tp/texi2any.pl,
	* util/texi-elements-by-size,
	* util/texindex.c,
	* util/texi2dvi,
	* util/gendocs_template,
	* util/gendocs_template_min: 2014.

2013-12-25  Karl Berry  <karl@gnu.org>

	* util/htmlxref.cnf (easejs): add.

2013-12-12  Ludovic Courtes  <ludo@gnu.org>  (tiny change)

	* util/htmlxref.cnf (dmd, guix, lsh): add.

2013-11-26  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\urlcolor, \linkcolor): just use black by default,
	for consistency and printing, etc.
	Another suggestion from Arnold.

2013-11-25  Karl Berry  <karl@gnu.org>

 	* contrib/perldoc-all/GNUmakefile (texi_pod_doc_incl): possibly
	remove a second > after X<...>.

	* util/gendocs.sh: remove $PACKAGE.info* before remaking,
	in case the number of Info files decreases.

	* doc/texinfo.tex (\urefbreakfinish): change the default PDF
	output to show the url even if the second arg is given, like DVI.  
	Suggestion from Arnold Robbins.
        (\ifurefurlonlylink): new ``secret'' conditional for the previous